# Medievalution

./: .gitignore  CMakeLists.txt  Medievalution.sln  README.md  desktop.ini  runscript.bat
Medievalution/: AbstracWidget.h  AbstractButton.h  Audio.cpp  Audio.h  Button.h  CheckBox.cpp  CheckBox.h  Component.cpp  Component.h  Define.cpp  Define.h  ECS.cpp  ECS.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Enums.h  Fonts.h  Game.cpp  Game.h  GameState.cpp  GameState.h  GraphicSettings.cpp  GraphicSettings.h  Input.cpp  Input.h  LoadingScreanState.cpp  LoadingScreanState.h  Main.cpp  MainMenuState.cpp  MainMenuState.h  Map.cpp  Map.h  Medievalution.rc  Medievalution.vcxproj  Medievalution.vcxproj.filters  PositionComponent.cpp  PositionComponent.h  Resources.cpp  (+20 more)
Medievalution/Config/: graphic_settings.ini
config/: graphic_settings.ini  imgui.ini  settings.json
ext_libs/: CMakeLIsts.txt
ext_libs/json/: CMakeLists.txt  json.hpp
resources/Flags/: Flags - Ярлык.lnk
resources/Map/: Provinces.csv
shaders/: map_color_change.frag  map_vert.vert  shader.frag  shader.vert
source/: Main.cpp  Win.hpp  resource.h  stdafx.h
source/Animation/: Animation.cpp  Animation.hpp
source/Camera/: Camera.cpp  Camera.h
source/Core/: Core.cpp  Core.h  IconText.h  Log.h
source/Game/: Game.cpp  Game.h
source/ImGui/: imgui-SFML.cpp  imgui.cpp  imgui.ini  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
source/Input/: Input.cpp  Input.h
source/Localisation/: Localisation.cpp  Localisation.hpp
source/Math/: Math.h
source/Observer/: Observable.hpp  Observer.hpp
source/Pathfinding/: Node.h  Pathfinding.cpp  Pathfinding.h
source/Resource/: Files.cpp  Files.hpp  Font.h  Jukebox.cpp  Jukebox.hpp  ResourceManager.hpp  ResourceManager.inl
source/Settings/: WindowSettings.cpp  WindowSettings.h
source/State/: GameState.cpp  GameState.h  IntroState.cpp  IntroState.h  MainMenuState.cpp  MainMenuState.h  SettingsState.cpp  SettingsState.h  State.cpp  State.h  StateManager.cpp  StateManager.h
source/World/: Province.cpp  Province.h  WorldMap.cpp  WorldMap.h
src/: Main.cpp  stdafx.h
src/Animation/: Animation.cpp  Animation.hpp
src/Camera/: Camera.cpp  Camera.h
src/Common/: Common.cpp  Common.h  IconText.h
src/Core/: Core.cpp  Core.h  IconText.h  Log.h
src/Entity/: Entity.cpp  Entity.hpp
src/Game/: Game.cpp  Game.h
src/Input/: Input.cpp  Input.h
src/Localisation/: Localisation.cpp  Localisation.hpp
src/Math/: Math.h  Math.inl
src/Observer/: Observable.hpp  Observer.hpp
src/Pathfinding/: Node.cpp  Node.h  Pathfinding.cpp  Pathfinding.h
src/Resource/: Files.cpp  Files.hpp  Jukebix.inl  Jukebox.cpp  Jukebox.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceManager.inl
src/Settings/: WindowSettings.cpp  WindowSettings.h
src/State/: BattleState.cpp  BattleState.hpp  GameState.cpp  GameState.hpp  IntroState.cpp  IntroState.h  IntroState.hpp  LoadingState.cpp  LoadingState.hpp  MainMenuState.cpp  MainMenuState.hpp  MenuState.cpp  MenuState.hpp  SettingsState.cpp  SettingsState.h  SettingsState.hpp  State.cpp  State.h  State.hpp  StateMachine.cpp  StateMachine.hpp  StateMachine.inl  StateManager.cpp  StateManager.h
src/World/: Battleground.cpp  Battleground.h  Province.h  WorldMap.cpp  WorldMap.h
src/World/Editor/: Board.cpp  Board.hpp  Editor.cpp  Editor.hpp  SpriteSheet.cpp  SpriteSheet.hpp
translation/: eng.json  rus.json
